; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/extr_drivers.c_uvirt_to_kva.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/extr_drivers.c_uvirt_to_kva.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64)* @uvirt_to_kva to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @uvirt_to_kva(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @pgd_none(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %47, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32* @pud_offset(i32* %15, i64 %16)
  store i32* %17, i32** %9, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i64, i64* %4, align 8
  %20 = call i32* @pmd_offset(i32* %18, i64 %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @pmd_none(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %46, label %25

25:                                               ; preds = %14
  %26 = load i32*, i32** %6, align 8
  %27 = load i64, i64* %4, align 8
  %28 = call i32* @pte_offset_kernel(i32* %26, i64 %27)
  store i32* %28, i32** %7, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i32, i32* %29, align 4
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i64 @pte_present(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %25
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @pte_page(i32 %35)
  %37 = call i64 @page_address(i32 %36)
  store i64 %37, i64* %5, align 8
  %38 = load i64, i64* %4, align 8
  %39 = load i32, i32* @PAGE_SIZE, align 4
  %40 = sub nsw i32 %39, 1
  %41 = sext i32 %40 to i64
  %42 = and i64 %38, %41
  %43 = load i64, i64* %5, align 8
  %44 = or i64 %43, %42
  store i64 %44, i64* %5, align 8
  br label %45

45:                                               ; preds = %34, %25
  br label %46

46:                                               ; preds = %45, %14
  br label %47

47:                                               ; preds = %46, %2
  %48 = load i64, i64* %5, align 8
  ret i64 %48
}

declare dso_local i32 @pgd_none(i32) #1

declare dso_local i32* @pud_offset(i32*, i64) #1

declare dso_local i32* @pmd_offset(i32*, i64) #1

declare dso_local i32 @pmd_none(i32) #1

declare dso_local i32* @pte_offset_kernel(i32*, i64) #1

declare dso_local i64 @pte_present(i32) #1

declare dso_local i64 @page_address(i32) #1

declare dso_local i32 @pte_page(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
